--- a/ConnectIQ (1).ipynb
+++ b/ConnectIQ (1).ipynb
@@ -31,7 +31,7 @@
     "import os\n",
     "\n",
     "if \"GROQ_API_KEY\" not in os.environ:\n",
-    "    os.environ[\"GROQ_API_KEY\"] = getpass.getpass(\"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\")"
+    "    os.environ[\"GROQ_API_KEY\"] = getpass.getpass(\"****")"
    ]
   },
   {
