--- a/ConnectIQ (1).ipynb
+++ b/ConnectIQ (1).ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -31,7 +31,7 @@
     "import os\n",
     "\n",
     "if \"GROQ_API_KEY\" not in os.environ:\n",
-    "    os.environ[\"GROQ_API_KEY\"] = getpass.getpass(\"****")"
+    "    os.environ[\"GROQ_API_KEY\"] = getpass.getpass(\"**\")"
    ]
   },
   {
